--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@delgada/cli",
   "version": "0.0.1",
   "description": "Command line interface and standard tooling for Delgada development.",
-  "author": "Hawk Ticehurst",
+  "author": "Hawk Ticehurst <hawkticehurst@gmail.com>",
   "license": "MIT",
   "homepage": "https://github.com/delgada-ui/cli#readme",
   "repository": {
@@ -14,7 +14,7 @@
   },
   "main": "build/index.js",
   "bin": {
-    "delgada": "build/index.js"
+    "delgada": "./bin/delgada.js"
   },
   "scripts": {
     "build": "tsc -p ./tsconfig.json"
@@ -26,5 +26,18 @@
     "@types/node": "^16.11.10",
     "prettier": "^2.5.0",
     "typescript": "^4.5.2"
-  }
+  },
+  "files": [
+    "bin",
+    "build"
+  ],
+  "keywords": [
+    "delgada",
+    "cli",
+    "ui",
+    "components",
+    "framework",
+    "compiler",
+    "templating"
+  ]
 }
