--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "build": "tsc -p ./tsconfig.json"
   },
   "dependencies": {
-    "commander": "^8.3.0"
+    "@delgada/core": "^0.1.2",
+    "commander": "^8.3.0",
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "@types/node": "^16.11.10",
+    "@types/node": "^16.11.18",
     "prettier": "^2.5.0",
     "typescript": "^4.5.2"
   },
